# lib/api-spec/openapi.yaml
@@ -156,6 +156,16 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/TranscriptSegment"
+        status:
+          type: string
+          enum: [processing, done, error]
+        progress:
+          type: integer
+        statusMessage:
+          type: string
+        error:
+          type: string
+          nullable: true
         createdAt:
           type: string
           format: date-time
@@ -169,6 +179,9 @@ components:
         - hideNames
         - markSpeakers
         - segments
+        - status
+        - progress
+        - statusMessage
         - createdAt
         - updatedAt
     TranscriptionUpdate:
